--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
@@ -21,12 +22,104 @@
                 <ul>Page 5</ul>
             </nav>
             <h2>Landfills</h2>
-            <p>There are many different faciltys in Otago for handling your trash. Different faciltys will accept different kinds of 
-                waste, some will even pay you for it!
-            </p>
-            <h3>Where they at</h3>
-            <h4>Green Island Landfill</h4>
-            <p>Phone: 03-488 4741 <br> Address: 9018/9 BrightonRoad </p>
+            <h3>Dunedin</h3>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Number</th>
+                </tr>
+                <tr>
+                    <td>Waste Management</td>
+                    <td>33 Wickliffe St</td>
+                    <td>477 1700</td>
+                </tr>
+                <tr>
+                    <td>Green Island Landfill</td>
+                    <td>9018/9 Brighton Rd, Green Island</td>
+                    <td>488 4741</td>
+                </tr>
+                <tr>
+                    <td>Envirowaste</td>
+                    <td>29 Brighton Rd, Green Island</td>
+                    <td>0800 240 120</td>
+                </tr>
+            </table>
+            <h3>Central Otago</h3>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Number</th>
+                </tr>
+                <tr>
+                    <td>Cromwell Transport & AllWaste Cromwell</td>
+                    <td>147 McNulty Rd</td>
+                    <td>445 0824</td>
+                </tr>
+                <tr>
+                    <td>Genesis Waste Transfer</td>
+                    <td>76 Burrows Rd</td>
+                    <td>+61 2 9519 5333</td>
+                </tr>
+            </table>
+            <h3>Clutha</h3>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Number</th>
+                </tr>
+                <tr>
+                 <td>Mount Cooee</td>
+                 <td>Kaitangata Highway</td>
+                 <td>419 0200419 0200</td>
+                </tr>
+            </table>
+            <h3>Waitaki</h3>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Number</th>
+                </tr>
+                <tr>
+                    <td>Palmerston Landiill</td>
+                    <td>Falcon St</td>
+                    <td>433 0240</td>
+                </tr>
+                <tr>
+                    <td>Waitaki Resource Recovery Trust</td>
+                    <td>42 Chelmer St</td>
+                    <td>434 0999</td>
+                </tr>
+                <td>Omarama Transfer Station</td>
+                <td>Omarama-Otematata Rd</td>
+                <td>0800 341 1111</td>
+            </table>
+            <h3>QueensTown Lakes</h3>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Number</th>
+                </tr>
+                <tr>
+                    <td>Victoria Flats Landfill</td>
+                    <td>Frankton</td>
+                    <td>445 1860</td>
+                </tr>
+                <tr>
+                    <td>Queenstown Transfer Station</td>
+                    <td>0 Glenda Dr</td>
+                    <td>03 451 0179</td>
+                </tr>
+                <tr>
+                    <td>Wanaka Transfer Station</td>
+                    <td>Ballantyne Road</td>
+                    <td>443 6063</td>
+                </tr>
+            </table>
     </main>
 </body>
 </html>
