--- a/page3.html
+++ b/page3.html
@@ -22,67 +22,43 @@
             <ul>Page 4</ul>
             <ul>Page 5</ul>
         </nav>
-        <h2>How to recycle</h2>
-        <p>It is important when recycleing to sort trash into the appropriat bins. By properly sorting and prepareing
-            your recycleing you ensure that your councils waste management will actually pick up your trash, and not
-            leave it uncollected with a mean looking red tag attached.
-        </p>
-        <h3>Recycling Bins</h3>
-        <p>Otago uses two diifernt bins for recycleing. These bins are used to recycle differnt kinds of waste. These
-            bins are collected
-            on alternating weeks, information regarding bin rotation can be found on your local councils website.
-        </p>
-        <h3>What goes in these bins?</h3>
+        <h2>Recycling in Otago</h2>
+        <h3>Home Recycling</h3>
+        <p>There are two ways you are able to recycle from home.</p>
         <h4>Blue Bins</h4>
-        <p>The blue bins are for all glass recycleing. This includes any jars or in if 
-        </p>
-        <h4>What not to put in blue bins</h4>
-        <p>Not every peice of glass is able to be recycled in this little blue bin. Fragile glass such as cups cannot be
-            recycled in blue bins as they would break during the collection proccess. This also means any broken glass
-            cannot be recycled. Other enelgeble candidates are mirrors or sheet glass.</p>
+        <ul>
+            <li>Jars</li>
+            <li>Bottles</li>
+            <li></li>
+        </ul>
+        <ul>
+            <li>Glassware</li>
+            <li>Broken Glass</li>
+        </ul>
         <h3>Yellow Bins</h3>
         <h4>Yellow Bin recycleing</h4>
-        <p>Yellow Bins are used for a wide varity of recycling. There can be some misconceptions as to what can and cant
-            be placed into yellow bins. The information provieded below can be used to help clarify what to recycle and
-            what to trash.</p>
-        <table>
-            <tr>
-                <th>Cardboard</th>
-                <th>Hard Plastic</th>
-                <th>Soft Plastics</th>
-                <th>News Paper</th>
-                <th>Paper</th>
-                <th>Cardboard Food Boxes</th>
-                <th>Aluminium Cans</th>
-                <th>Tins</th>
-            </tr>
-            <tr>
-                <td>Recycleable</td>
-                <td>&#10003;</td>
-                <td></td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Not Recycleable</td>
-                <td></td>
-                <td>&#10003;</td>
-                <td></td>
-                <td></td>
-                <td>&#10003;</td>
-            </tr>
-            <tr>
-            </tr>
-        </table>
-        <h3>Preparing recycleables</h3>
-        <h4>Rinse your Bottles and Jars!</h4>
-        <p>The friendly folk at the recycleing plant dont want to have to deal with you mouldy pasta jars. Do them a
-            favor and rinse them out first. Rinse out any remaining contents from any jars or plastics you have.</p>
-        <h4>Aluminium Cans and Tins</h4>
-        <p>The lids of these cans cannot be recycled so they should be dicarded. It is also easier to recycle these cans
-            if they are not crushed or bent.
-        </p>
+        <h5>Recycleable</h5>
+        <ul>
+            <li>Hard Plastic</li>
+            <li>Cardboard</li>
+            <li>Aluminium Cans</li>
+            <li>Tins</li>
+            <li>Paper</li>
+        </ul>
+        <h5>Unrecycleable</h5>
+        <ul>
+            <li>Food Containers</li>
+            <li>Soft Plastic</li>
+            <li>Disposeable cutlury</li>
+            <li>Electronics</li>
+            <li>Metal</li>
+        </ul>
+        <h3>Public Recycling</h3>
+        <h4>Bins</h4>
+        <p>Around Otago you will find bins that allow you to recycle your plastic and glass. These bins are not for
+            disposeing of recycle from your house, just for what you pick up while on the go</p>
+        <h4>Bottle Banks</h4>
+            <p>Drank so much you have an overflowing glass bin? Use one of the public bottle banks</p>
         <footer>
             Author: Nicholas Marr
             Ref: Dunedin City Councel Website
