--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <header>
         <h1 class="title">New Zealand Recycling</h1>
     </header>
-    <nav>
-        <ul>Index</ul>
-        <ul>Page 2</ul>
-        <ul>Page 3</ul>
-        <ul>Page 4</ul>
-        <ul>Page 5</ul>
-    </nav>
+    
     <main>
-
+        <nav>
+            <ul><a href="index.html">Index</a></ul>
+            <ul><a href="page2.html">Page2</a></ul>
+            <ul><a href="page3.html">Page3</a></ul>
+            <ul><a href="page4.html">Page4</a></ul>
+            <ul><a href="page5.html">Page5</a></ul>
+        </nav>
     </main>
     <footer>
         Author: Nicholas Marr
