--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <main>
         <header>
             <h1 class="title">New Zealand Recycling</h1>
         </header>
-    
+        <nav>
+            <ul><a href="index.html">Index</a></ul>
+            <ul><a href="page2.html">Page2</a></ul>
+            <ul><a href="page3.html">Page3</a></ul>
+            <ul><a href="page4.html">Page4</a></ul>
+            <ul><a href="page5.html">Page5</a></ul>
+        </nav>
         <main>
-            <nav>
-                <ul>Index</ul>
-                <ul>Page 2</ul>
-                <ul>Page 3</ul>
-                <ul>Page 4</ul>
-                <ul>Page 5</ul>
-            </nav>
+
             <h2>Landfills</h2>
             <h3>Dunedin</h3>
             <table>
@@ -28,21 +30,32 @@
                     <th>Name</th>
                     <th>Address</th>
                     <th>Number</th>
+                    <th>Weekday</th>
+                    <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td>Waste Management</td>
+                    <td><a
+                            href="https://www.wastemanagement.co.nz/for-home/transfer-stations/south-island/dunedin/dunedin-transfer-station">Waste
+                            Management</a></td>
                     <td>33 Wickliffe St</td>
                     <td>477 1700</td>
+                    <td>Monday - Saturday 8.00am - 5.00pm</td>
+                    <td>Sunday 9.00am - 5.00pm</td>
                 </tr>
                 <tr>
-                    <td>Green Island Landfill</td>
+                    <td><a href="https://www.dunedin.govt.nz/services/rubbish-and-recycling/landfills">Green Island
+                            Landfill</a></td>
                     <td>9018/9 Brighton Rd, Green Island</td>
                     <td>488 4741</td>
+                    <td>Monday to Saturday 8.00am - 5.30pm</td>
+                    <td>Sunday 9.00am - 5.30pm</td>
                 </tr>
                 <tr>
-                    <td>Envirowaste</td>
+                    <td><a href="https://www.envirowaste.co.nz/"> Envirowaste</a></td>
                     <td>29 Brighton Rd, Green Island</td>
-                    <td>0800 240 120</td>
+                    <td>477 7722</td>
+                    <td>8am-5pm</td>
+                    <td>8am-5pm</td>
                 </tr>
             </table>
             <h3>Central Otago</h3>
@@ -51,16 +64,31 @@
                     <th>Name</th>
                     <th>Address</th>
                     <th>Number</th>
+                    <th>Weekday</th>
+                    <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td>Cromwell Transport & AllWaste Cromwell</td>
-                    <td>147 McNulty Rd</td>
+                    <td><a href="https://allwaste.co.nz/"> AllWaste Cromwell</a></td>
+                    <td>70 Bannockburn Road</td>
                     <td>445 0824</td>
+                    <td>10am - 5pm</td>
+                    <td>10am - 5pm</td>
                 </tr>
                 <tr>
-                    <td>Genesis Waste Transfer</td>
-                    <td>76 Burrows Rd</td>
-                    <td>+61 2 9519 5333</td>
+                    <td><a href="https://allwaste.co.nz/"> AllWaste Alexandra</a></td>
+                    <td>65 Boundary Road</td>
+                    <td>03 440 2204</td>
+                    <td>10am - 5pm</td>
+                    <td>10am - 5pm</td>
+                </tr>
+                <tr>
+                    <td><a
+                            href="https://www.centralotagonz.com/ranfurly-naseby/ranfurly/waste-disposal-dump-stations/x,1,5231/ranfurly-transfer-station.html">Ranfurly
+                            Transfer Station</a></td>
+                    <td>Drumglass Street, Ranfurly</td>
+                    <td>03 440 0056</td>
+                    <td>1pm - 4pm</td>
+                    <td>1pm - 4pm</td>
                 </tr>
             </table>
             <h3>Clutha</h3>
@@ -69,11 +97,17 @@
                     <th>Name</th>
                     <th>Address</th>
                     <th>Number</th>
+                    <th>Weekday</th>
+                    <th>Weekends</th>
                 </tr>
                 <tr>
-                 <td>Mount Cooee</td>
-                 <td>Kaitangata Highway</td>
-                 <td>419 0200419 0200</td>
+                    <td><a
+                            href="https://www.cluthadc.govt.nz/your-services/rubbish-and-recycling/Pages/Landfill-and-Transfer-Stations.aspx">Mount
+                            Cooee</a></td>
+                    <td>Kaitangata Highway</td>
+                    <td>419 0200419 0200</td>
+                    <td>8am - 4.30pm</td>
+                    <td>10am - 4.30pm</td>
                 </tr>
             </table>
             <h3>Waitaki</h3>
@@ -82,20 +116,34 @@
                     <th>Name</th>
                     <th>Address</th>
                     <th>Number</th>
+                    <th>Weekday</th>
+                    <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td>Palmerston Landiill</td>
+                    <td><a
+                            href="https://www.waitaki.govt.nz/our-services/rubbish-and-recycling/dropoffservices/Pages/councillandfills.aspx">Palmerston
+                            Landiill</a></td>
                     <td>Falcon St</td>
                     <td>433 0240</td>
+                    <td>​Tuesday 11am - 2pm</td>
+                    <td>Sunday 11am - 2pm</td>
                 </tr>
                 <tr>
-                    <td>Waitaki Resource Recovery Trust</td>
+                    <td><a href="https://resourcewaitaki.co.nz/">Waitaki Resource Recovery Trust</a></td>
                     <td>42 Chelmer St</td>
                     <td>434 0999</td>
+                    <td>9am - 4.30pm</td>
+                    <td>10am - 4pm</td>
                 </tr>
-                <td>Omarama Transfer Station</td>
-                <td>Omarama-Otematata Rd</td>
-                <td>0800 341 1111</td>
+                <tr>
+                    <td><a
+                            href="https://www.waitaki.govt.nz/our-services/rubbish-and-recycling/dropoffservices/Pages/councilrecoveryparks.aspx">Omarama
+                            Resource Recovery Park</a></td>
+                    <td>Omarama-Otematata Rd</td>
+                    <td>0800 341 1111</td>
+                    <td>9am - 12pm</td>
+                    <td></td>
+                </tr>
             </table>
             <h3>QueensTown Lakes</h3>
             <table>
@@ -103,23 +151,36 @@
                     <th>Name</th>
                     <th>Address</th>
                     <th>Number</th>
+                    <th>Weekday</th>
+                    <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td>Victoria Flats Landfill</td>
-                    <td>Frankton</td>
-                    <td>445 1860</td>
-                </tr>
-                <tr>
-                    <td>Queenstown Transfer Station</td>
+                    <td><a
+                            href="https://www.qldc.govt.nz/services/rubbish-and-recycling/rubbish-collection-days-and-options/transfer-stations/">Queenstown
+                            Transfer Station</a></td>
                     <td>0 Glenda Dr</td>
                     <td>03 451 0179</td>
+                    <td>8am – 5pm</td>
+                    <td>8am – 5pm</td>
                 </tr>
                 <tr>
-                    <td>Wanaka Transfer Station</td>
+                    <td><a
+                            href="https://www.qldc.govt.nz/services/rubbish-and-recycling/rubbish-collection-days-and-options/transfer-stations/">Wanaka 
+                            Transfer Station</a></td>
                     <td>Ballantyne Road</td>
                     <td>443 6063</td>
+                    <td>8am - 5pm</td>
+                    <td>8am - 5pm</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.wastebusters.co.nz/">Wastebusters Wanaka</a></td>
+                    <td>Ballantyne Rd</td>
+                    <td>443 8606</td>
+                    <td>8am – 5pm</td>
+                    <td>8am – 5pm</td>
                 </tr>
             </table>
-    </main>
+        </main>
 </body>
+
 </html>
