--- a/page3.html
+++ b/page3.html
@@ -16,15 +16,16 @@
 
     <main>
         <nav>
-            <ul>Index</ul>
-            <ul>Page 2</ul>
-            <ul>Page 3</ul>
-            <ul>Page 4</ul>
-            <ul>Page 5</ul>
+            <ul><a href="index.html">Index</a></ul>
+            <ul><a href="page2.html">Page2</a></ul>
+            <ul><a href="page3.html">Page3</a></ul>
+            <ul><a href="page4.html">Page4</a></ul>
+            <ul><a href="page5.html">Page5</a></ul>
         </nav>
-        <h2>Recycling in Otago</h2>
+        <h2>How to recycle</h2>
         <h3>Home Recycling</h3>
-        <p>There are two ways you are able to recycle from home.</p>
+        <p>Along with normal trash collection hired by your local council Recycling collecting is contracted also. This
+            service is coverd by your rates. There are two bins that can be used to recycle different forms of waste.</p>
         <h4>Blue Bins</h4>
         <ul>
             <li>Jars</li>
@@ -34,6 +35,8 @@
         <ul>
             <li>Glassware</li>
             <li>Broken Glass</li>
+            <li>Mirrors</li>
+            <li>Sheet Glass</li>
         </ul>
         <h3>Yellow Bins</h3>
         <h4>Yellow Bin recycleing</h4>
@@ -58,7 +61,7 @@
         <p>Around Otago you will find bins that allow you to recycle your plastic and glass. These bins are not for
             disposeing of recycle from your house, just for what you pick up while on the go</p>
         <h4>Bottle Banks</h4>
-            <p>Drank so much you have an overflowing glass bin? Use one of the public bottle banks</p>
+        <p>Large bottle banks are avalible. These can be used if you have a mountan of beer bottles overflowing from your blue bins.</p>
         <footer>
             Author: Nicholas Marr
             Ref: Dunedin City Councel Website
