--- a/page4.html
+++ b/page4.html
@@ -13,23 +13,24 @@
     <header>
         <h1 class="title">New Zealand Recycling</h1>
     </header>
-    <nav>
-        <ul>Index</ul>
-        <ul>Page 2</ul>
-        <ul>Page 3</ul>
-        <ul>Quiz</ul>
-        <ul>Page 5</ul>
-    </nav>
-<main>
-<form>
-    <fieldset>
-        <legend>Question 1</legend>
-        Yellow bins accept soft plastics.<br>
-            <input type="radio" name="bin" value="Yes"><label for="yes">Yes</label> 
-            <input type="radio" name="bin" value="No"><label for="no">No</label>
-        </fieldset>
-</form>
-</main>
+
+    <main>
+        <nav>
+            <ul><a href="index.html">Index</a></ul>
+            <ul><a href="page2.html">Page2</a></ul>
+            <ul><a href="page3.html">Page3</a></ul>
+            <ul><a href="page4.html">Page4</a></ul>
+            <ul><a href="page5.html">Page5</a></ul>
+        </nav>
+        <form>
+            <fieldset>
+                <legend>Question 1</legend>
+                Yellow bins accept soft plastics.<br>
+                <input type="radio" name="bin" value="Yes"><label for="yes">Yes</label>
+                <input type="radio" name="bin" value="No"><label for="no">No</label>
+            </fieldset>
+        </form>
+    </main>
 </body>
 
 </html>
