--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <header>
         <h1 class="title">New Zealand Recycling</h1>
     </header>
-    
+
     <main>
         <nav>
             <ul><a href="index.html">Index</a></ul>
-            <ul><a href="page2.html">Page2</a></ul>
-            <ul><a href="page3.html">Page3</a></ul>
-            <ul><a href="page4.html">Page4</a></ul>
-            <ul><a href="page5.html">Page5</a></ul>
+            <ul><a href="waste-reduction.html">Reduce your footprint</a> </ul>
+            <ul><a href="Landfill.html">Landfills</a></ul>
+            <ul><a href="Recycle.html">Recycle</a></ul>
+            <ul><a href="E-Waste.html">E-Waste</a></ul>
+            <ul><a href="Quiz.html">Quiz</a></ul>
         </nav>
     </main>
     <footer>
