--- a/E-Waste.html
+++ b/E-Waste.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="title">New Zealand Recycling</h1>
-    </header>
     <main>
+            <header>
+                    <h1 class="title">Recycling in Otago</h1>
+                </header>
         <nav>
-            <ul><a href="index.html">Index</a></ul>
-            <ul><a href="waste-reduction.html">Reduce your footprint</a> </ul>
-            <ul><a href="Landfill.html">Landfills</a></ul>
-            <ul><a href="Recycle.html">Recycle</a></ul>
-            <ul><a href="E-Waste.html">E-Waste</a></ul>
-            <ul><a href="Quiz.html">Quiz</a></ul>
+            <a class="button" href="index.html">Index</a>
+            <a class="button" href="waste-reduction.html">Reduce your footprint</a>
+            <a class="button" href="Landfill.html">Landfills</a>
+            <a class="button" href="Recycle.html">Recycle</a>
+            <a class="button" href="E-Waste.html">E-Waste</a>
+            <a class="button" href="Quiz.html">Quiz</a>
         </nav>
         <h2>E-Waste</h2>
         <h3>What is E-waste?</h3>
@@ -28,7 +28,7 @@
             can contain hazzardos materials.
             In batterys for example chemicals can lech out into the enviroment contaiminating it. This means e waste
             cannot be disposed of by normal means</p>
-            <img src="images/e-waste.jpg" alt="">
+        <img src="images/e-waste.jpg" alt="">
         <h3>What do i do with my e waste</h3>
         <h4>Resell</h4>
         <p>If your electronicss work why not sell them through websites like trade me or face book. This help the
@@ -38,7 +38,7 @@
             any regular landfill.
             This could not only harm the enviroment but waste precious materials insdie the electronics that could be
             recycled.</p>
-            <img src="copper-wire.jpg" alt="">
+        <img src="copper-wire.jpg" alt="">
         <table>
             <tr>
                 <th>Name</th>
@@ -66,13 +66,13 @@
                 <td>10am - 5pm</td>
             </tr>
             <td><a
-                href="https://www.cluthadc.govt.nz/your-services/rubbish-and-recycling/Pages/Landfill-and-Transfer-Stations.aspx">Mount
-                Cooee</a></td>
-        <td>Kaitangata Highway</td>
-        <td>Clutha</td>
-        <td>419 0200</td>
-        <td>8am - 4.30pm</td>
-        <td>10am - 4.30pm</td>
+                    href="https://www.cluthadc.govt.nz/your-services/rubbish-and-recycling/Pages/Landfill-and-Transfer-Stations.aspx">Mount
+                    Cooee</a></td>
+            <td>Kaitangata Highway</td>
+            <td>Clutha</td>
+            <td>419 0200</td>
+            <td>8am - 4.30pm</td>
+            <td>10am - 4.30pm</td>
             <tr>
                 <td><a href="https://resourcewaitaki.co.nz/">Waitaki Resource Recovery Trust</a></td>
                 <td>42 Chelmer St</td>
