--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="title">New Zealand Recycling</h1>
-    </header>
+
 
     <main>
+        <header>
+            <h1 class="title">Recycling in Otago</h1>
+        </header>
         <nav>
-            <ul><a href="index.html">Index</a></ul>
-            <ul><a href="waste-reduction.html">Reduce your footprint</a> </ul>
-            <ul><a href="Landfill.html">Landfills</a></ul>
-            <ul><a href="Recycle.html">Recycle</a></ul>
-            <ul><a href="E-Waste.html">E-Waste</a></ul>
-            <ul><a href="Quiz.html">Quiz</a></ul>
+            <a class="button" href="index.html">Index</a>
+            <a class="button" href="waste-reduction.html">Reduce your footprint</a>
+            <a class="button" href="Landfill.html">Landfills</a>
+            <a class="button" href="Recycle.html">Recycle</a>
+            <a class="button" href="E-Waste.html">E-Waste</a>
+            <a class="button" href="Quiz.html">Quiz</a>
         </nav>
     </main>
     <footer>
