--- a/Landfill.html
+++ b/Landfill.html
@@ -11,16 +11,16 @@
 
 <body>
     <main>
-        <header>
-            <h1 class="title">New Zealand Recycling</h1>
-        </header>
+            <header>
+                    <h1 class="title">Recycling in Otago</h1>
+                </header>
         <nav>
-            <ul><a href="index.html">Index</a></ul>
-            <ul><a href="waste-reduction.html">Reduce your footprint</a> </ul>
-            <ul><a href="Landfill.html">Landfills</a></ul>
-            <ul><a href="Recycle.html">Recycle</a></ul>
-            <ul><a href="E-Waste.html">E-Waste</a></ul>
-            <ul><a href="Quiz.html">Quiz</a></ul>
+            <a class="button" href="index.html">Index</a>
+            <a class="button" href="waste-reduction.html">Reduce your footprint</a>
+            <a class="button" href="Landfill.html">Landfills</a>
+            <a class="button" href="Recycle.html">Recycle</a>
+            <a class="button" href="E-Waste.html">E-Waste</a>
+            <a class="button" href="Quiz.html">Quiz</a>
         </nav>
         <main>
 
@@ -35,20 +35,21 @@
                     <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td><a href="https://www.wastemanagement.co.nz/for-home/transfer-stations/south-island/dunedin/dunedin-transfer-station">Waste
+                    <td><a
+                            href="https://www.wastemanagement.co.nz/for-home/transfer-stations/south-island/dunedin/dunedin-transfer-station">Waste
                             Management</a></td>
                     <td>33 Wickliffe St</td>
                     <td>477 1700</td>
-                    <td>Monday - Saturday 8.00am - 5.00pm</td>
-                    <td>Sunday 9.00am - 5.00pm</td>
+                    <td>Monday - Saturday <br> 8.00am - 5.00pm</td>
+                    <td>Sunday <br> 9.00am - 5.00pm</td>
                 </tr>
                 <tr>
                     <td><a href="https://www.dunedin.govt.nz/services/rubbish-and-recycling/landfills">Green Island
                             Landfill</a></td>
                     <td>9018/9 Brighton Rd, Green Island</td>
                     <td>488 4741</td>
-                    <td>Monday to Saturday 8.00am - 5.30pm</td>
-                    <td>Sunday 9.00am - 5.30pm</td>
+                    <td>Monday to Saturday <br> 8.00am - 5.30pm</td>
+                    <td>Sunday <br> 9.00am - 5.30pm</td>
                 </tr>
                 <tr>
                     <td><a href="https://www.envirowaste.co.nz/"> Envirowaste</a></td>
@@ -82,7 +83,8 @@
                     <td>10am - 5pm</td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.centralotagonz.com/ranfurly-naseby/ranfurly/waste-disposal-dump-stations/x,1,5231/ranfurly-transfer-station.html">Ranfurly
+                    <td><a
+                            href="https://www.centralotagonz.com/ranfurly-naseby/ranfurly/waste-disposal-dump-stations/x,1,5231/ranfurly-transfer-station.html">Ranfurly
                             Transfer Station</a></td>
                     <td>Drumglass Street, Ranfurly</td>
                     <td>03 440 0056</td>
@@ -100,7 +102,8 @@
                     <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td><a href="https://www.cluthadc.govt.nz/your-services/rubbish-and-recycling/Pages/Landfill-and-Transfer-Stations.aspx">Mount
+                    <td><a
+                            href="https://www.cluthadc.govt.nz/your-services/rubbish-and-recycling/Pages/Landfill-and-Transfer-Stations.aspx">Mount
                             Cooee</a></td>
                     <td>Kaitangata Highway</td>
                     <td>419 0200419 0200</td>
@@ -118,12 +121,13 @@
                     <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td><a href="https://www.waitaki.govt.nz/our-services/rubbish-and-recycling/dropoffservices/Pages/councillandfills.aspx">Palmerston
+                    <td><a
+                            href="https://www.waitaki.govt.nz/our-services/rubbish-and-recycling/dropoffservices/Pages/councillandfills.aspx">Palmerston
                             Landiill</a></td>
                     <td>Falcon St</td>
                     <td>433 0240</td>
-                    <td>​Tuesday 11am - 2pm</td>
-                    <td>Sunday 11am - 2pm</td>
+                    <td>​Tuesday <br> 11am - 2pm</td>
+                    <td>Sunday <br> 11am - 2pm</td>
                 </tr>
                 <tr>
                     <td><a href="https://resourcewaitaki.co.nz/">Waitaki Resource Recovery Trust</a></td>
@@ -133,7 +137,8 @@
                     <td>10am - 4pm</td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.waitaki.govt.nz/our-services/rubbish-and-recycling/dropoffservices/Pages/councilrecoveryparks.aspx">Omarama
+                    <td><a
+                            href="https://www.waitaki.govt.nz/our-services/rubbish-and-recycling/dropoffservices/Pages/councilrecoveryparks.aspx">Omarama
                             Resource Recovery Park</a></td>
                     <td>Omarama-Otematata Rd</td>
                     <td>0800 341 1111</td>
@@ -151,7 +156,8 @@
                     <th>Weekends</th>
                 </tr>
                 <tr>
-                    <td><a href="https://www.qldc.govt.nz/services/rubbish-and-recycling/rubbish-collection-days-and-options/transfer-stations/">Queenstown
+                    <td><a
+                            href="https://www.qldc.govt.nz/services/rubbish-and-recycling/rubbish-collection-days-and-options/transfer-stations/">Queenstown
                             Transfer Station</a></td>
                     <td>0 Glenda Dr</td>
                     <td>03 451 0179</td>
@@ -159,7 +165,8 @@
                     <td>8am – 5pm</td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.qldc.govt.nz/services/rubbish-and-recycling/rubbish-collection-days-and-options/transfer-stations/">Wanaka
+                    <td><a
+                            href="https://www.qldc.govt.nz/services/rubbish-and-recycling/rubbish-collection-days-and-options/transfer-stations/">Wanaka
                             Transfer Station</a></td>
                     <td>Ballantyne Road</td>
                     <td>443 6063</td>
