added second attempt

--- a/Recycle.html
+++ b/Recycle.html
@@ -25,33 +25,50 @@
         </nav>
         <h2>How to recycle</h2>
         <h3>Home Recycling</h3>
-        <p>To properly recycle, waste must be sorted into the correct bins. Not all waste can be recycled, and some
-            times similar waste cant even be recycled the same way</p>
- 
-        <section class="recycle-container">
+        <p>Want to learn how to recycle properly, your in the right place! This page will provide information regarding
+            where you can </p>
 
-            <div class="recycle-glass1">
-                <p>What goes in the blue bin? </p>
-                <ul>
-                    <li>Beverage Bottles</li>
-                    <li>Food Bottles</li>
-                    <li>Jars</li>
-                </ul>
-                <img src="images/glass.jpg" alt="">
-            </div>
-            <div>
-                <h4>What glass cant i recycle?</h4>
-                <p>Some glass has had chemicals added to the glass. This makes it impossible to use in the glass
-                    recycleing
-                    proccess.</p>
-                <h4>Unrecycleable glass</h4>
-                <ul>
-                    <li>Frosted Glass</li>
-                    <li>Drinking Glasses</li>
-                    <li>Mirrors</li>
-                </ul>
-            </div>
-            <div>
+        <section class="redbin-container">
+            <h3 class="redbin-intro">What cant be recycled?</h3>
+            <p class="leadbox1">Not everything can be recycled. The waste below should go into red topped whille bins or
+                rubish
+                bags
+            </p>
+            <ul class="unrecycleables">
+                <li class="unrecycleables-item">Plastics bags!</li>
+                <li class="unrecycleables-item">Food Scraps</li>
+                <li class="unrecycleables-item">Green Waste</li>
+                <li class="unrecycleables-item">Diapers</li>
+                <li class="unrecycleables-item">Clothes</li>
+                <li class="unrecycleables-item">Metal</li>
+            </ul>
+            <img class="greenbin" src="images/greentop.jpg" alt="Greentop">
+
+
+
+        </section>
+        <div class="recycle-glass1">
+            <p>What goes in the blue bin? </p>
+            <ul>
+                <li>Beverage Bottles</li>
+                <li>Food Bottles</li>
+                <li>Jars</li>
+            </ul>
+            <img src="images/glass.jpg" alt="">
+        </div>
+        <div>
+            <h4>What glass cant i recycle?</h4>
+            <p>Some glass has had chemicals added to the glass. This makes it impossible to use in the glass
+                recycleing
+                proccess.</p>
+            <h4>Unrecycleable glass</h4>
+            <ul>
+                <li>Frosted Glass</li>
+                <li>Drinking Glasses</li>
+                <li>Mirrors</li>
+            </ul>
+        </div>
+        <div>
             <h3>Yellow bins</h3>
             <p>Yellow bins are used to recycle a wide varity of waste. These lists should give you a general idea of
                 what
@@ -66,31 +83,23 @@
         </div>
         <div>
             <h4>I hate!</h4>
-            <ul>
-                <li>Plastics bags!</li>
-                <li>Medical Waste!</li>
-                <li>Metal!</li>
-                <li>Electronics and Batterys</li>
-                <li>Green Waste</li>
-                <li>Waste Or Diapers</li>
-                <li>Clothes</li>
-            </ul>
+
         </div>
-            <h4>Getting them ready for recycleing</h4>
-            <p>All glass should be rinsed and cleaned of any remaining contents</p>
+        <h4>Getting them ready for recycleing</h4>
+        <p>All glass should be rinsed and cleaned of any remaining contents</p>
 
 
-            <h3>Public Recycling</h3>
-            <h4>Bins</h4>
-            <p>Around Otago you will find bins that allow you to recycle your plastic and glass. <strong>You cannot
-                    empty
-                    your personal bins here.</strong> </p>
-            <img src="images/public.jpg" alt="">
-            <h4>Bottle Banks</h4>
-            <p>Large bottle banks are avalible. These can be used if you have a mountan of beer bottles overflowing from
-                your blue bins.</p>
-            <img src="images/bottlebank.jpg" alt="">
-        </section>
+        <h3>Public Recycling</h3>
+        <h4>Bins</h4>
+        <p>Around Otago you will find bins that allow you to recycle your plastic and glass. <strong>You cannot
+                empty
+                your personal bins here.</strong> </p>
+        <img src="images/public.jpg" alt="">
+        <h4>Bottle Banks</h4>
+        <p>Large bottle banks are avalible. These can be used if you have a mountan of beer bottles overflowing from
+            your blue bins.</p>
+        <img src="images/bottlebank.jpg" alt="">
+
         <footer>
             Author: Nicholas Marr
             Ref: Dunedin City Councel Website
