--- a/WebAssesment 2/Recycle.html
+++ b/WebAssesment 2/Recycle.html
@@ -10,88 +10,92 @@
 </head>
 
 <body>
-        <div class="parallax"></div>
-    <main>
-        <header>
-            <h1>Green Otago</h1>
-        </header>
-        <nav>
-            <a class="button" href="index.html">Index</a>
-            <a class="button" href="Recycle.html">BeGreener</a>
-            <a class="button" href="landfill.html">Landfills</a>
-            <a class="button" href="waste-reduction.html">Recycle</a>
-            <a class="button" href="E-Waste.html">E-Waste</a>
-            <a class="button" href="Quiz.html">Quiz</a>
-        </nav>
+    <div class="parallax">
 
-        <h2>Recycling in Otago</h2>
-        <p>There are two different bins at home used for personal recycling. A yellow bin and a blue bin, below you can
-            see what can and cant go in each bin. </p>
-        <section class="Recycle-container">
-            <div class="Recycle-do">
-                <!--Recyleable Section/ Do section-->
-                <h2>Recycle!</h2>
-                <h3>These items do go in the blue bin!</h3>
-                <ul class="can-glass">
-                    <li>Beverage Bottle</li>
-                    <li>Food Bottles</li>
-                    <li>Jars</li>
-                </ul>
-                <h3>Yellow Bins</h3>
-                <ul class="can-yellow">
-                    <li>Plastic Bottles and Containers</li>
-                    <li>Cardboard Boxes</li>
-                    <li>Aluminium Tins and Cans</li>
-                    <li>Books and News papers</li>
-                </ul>
-
-                <h2>Remember to!</h2>
-                <ul class="remeber-to">
-                    <li>Rinse out jars, containers and tins</li>
-                    <li>Flatten Cardboard</li>
-                    <li>Keep lids on bottles</li>
-                    <li>Remove covers off of books</li>
-                </ul>
+        <main>
+            <header>
+                <h1>Green Otago</h1>
+            </header>
+            <nav>
+                <a class="button" href="index.html">Index</a>
+                <a class="button" href="Recycle.html">BeGreener</a>
+                <a class="button" href="landfill.html">Landfills</a>
+                <a class="button" href="waste-reduction.html">Recycle</a>
+                <a class="button" href="E-Waste.html">E-Waste</a>
+                <a class="button" href="Quiz.html">Quiz</a>
+            </nav>
+            <div class="recycle-lead">
+                <h2>Recycling in Otago</h2>
+                <p>There are two different bins at home used for personal recycling. A yellow bin and a blue bin, below
+                    you can
+                    see what can and cant go in each bin. </p>
             </div>
-            <!--Unecyleable Section/ Dont section-->
-            <div class="Recycle-dont">
-                <h2>Dont Recycle!</h2>
-                <h3>The blue bin cant take these</h3>
-                <ul class="dont-blue">
-                    <li>Broken Glass</li>
-                    <li>Windows</li>
-                    <li>Mirrors</li>
-                    <li>Cups and other glassware</li>
-                </ul>
-                <h3>Yellow bins dont take</h3>
-                <ul class="dont-yellow">
-                    <li>Electronics</li>
-                    <li>Plastic Bags</li>
-                    <li>Batteries</li>
-                    <li>Metal</li>
-                    <li>Glass</li>
-                    <li>Clothing</li>
-                    <li>Polystyrene or milk cartons</li>
-                    <li>Medical Waste</li>
-                </ul>
-                <h2>Dont!</h2>
-                <ul class="dont-list">
-                    <li>Bend or crush cans</li>
-                    <li>Leave food in jars or containers</li>
-                    <li>Seperate caps from bottles</li>
-                    <li>Bundle recycleables in plastics bags</li>
-                </ul>
-                </ul>
-            </div>
-        </section>
-        <h2>What do i do with my medical waste?</h2>
-        <p>Any sryngies or medication can be handed into you local pharmacy where it can be properly disposed of.</p>
-        <h2>How do i dispose of my electronics?</h2>
-        <p>Electronics can only be recyled at landfills equiped to deal with electronic waste. Consult our page on <a
-                href="">E-waste</a> for more information</p>
-    </main>
-    <div class="parallax"></div>
+            <section class="Recycle-container">
+                <div class="Recycle-do">
+                    <!--Recyleable Section/ Do section-->
+                    <h2>Recycle!</h2>
+                    <h3>These items do go in the blue bin!</h3>
+                    <ul class="can-glass">
+                        <li>Beverage Bottle</li>
+                        <li>Food Bottles</li>
+                        <li>Jars</li>
+                    </ul>
+                    <h3>Yellow Bins</h3>
+                    <ul class="can-yellow">
+                        <li>Plastic Bottles and Containers</li>
+                        <li>Cardboard Boxes</li>
+                        <li>Aluminium Tins and Cans</li>
+                        <li>Books and News papers</li>
+                    </ul>
 
+                    <h2>Remember to!</h2>
+                    <ul class="remeber-to">
+                        <li>Rinse out jars, containers and tins</li>
+                        <li>Flatten Cardboard</li>
+                        <li>Keep lids on bottles</li>
+                        <li>Remove covers off of books</li>
+                    </ul>
+                </div>
+                <!--Unecyleable Section/ Dont section-->
+                <div class="Recycle-dont">
+                    <h2>Dont Recycle!</h2>
+                    <h3>The blue bin cant take these</h3>
+                    <ul class="dont-blue">
+                        <li>Broken Glass</li>
+                        <li>Windows</li>
+                        <li>Mirrors</li>
+                        <li>Cups and other glassware</li>
+                    </ul>
+                    <h3>Yellow bins dont take</h3>
+                    <ul class="dont-yellow">
+                        <li>Electronics</li>
+                        <li>Plastic Bags</li>
+                        <li>Batteries</li>
+                        <li>Metal</li>
+                        <li>Glass</li>
+                        <li>Clothing</li>
+                        <li>Polystyrene or milk cartons</li>
+                        <li>Medical Waste</li>
+                    </ul>
+                    <h2>Dont!</h2>
+                    <ul class="dont-list">
+                        <li>Bend or crush cans</li>
+                        <li>Leave food in jars or containers</li>
+                        <li>Seperate caps from bottles</li>
+                        <li>Bundle recycleables in plastics bags</li>
+                    </ul>
+                    </ul>
+                </div>
+            </section>
+            <h2>What do i do with my medical waste?</h2>
+            <p>Any sryngies or medication can be handed into you local pharmacy where it can be properly disposed
+                of.</p>
+            <h2>How do i dispose of my electronics?</h2>
+            <p>Electronics can only be recyled at landfills equiped to deal with electronic waste. Consult our page
+                on <a href="">E-waste</a> for more information</p>
+        </main>
+
+    </div>
 </body>
 
 </html>
