--- a/WebAssesment 2/e-waste.html
+++ b/WebAssesment 2/e-waste.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+        <div class="parallax">
     <main>
         <header>
             <h1>Green Otago</h1>
@@ -24,7 +26,22 @@
         </nav>
         <h2>E-Waste</h2>
         <h3>What is E-waste</h3>
-        
+        <p>E-waste is unwanted or broken electonics. This is not limited to appliances such as Tv's or computers but
+            includes Whiteware aswell. </p>
+        <img src="images/e-waste.jpg" alt="">
+        <h3></h3>
+        <P>Some of the components can be hazardous to the enviroment. Hazardous chemicals in batterys for example can
+            leach out into the soil which can contaiminate drinking water. </P>
+            <img src="images/battery-spill.png" alt="">
+        <h3></h3>
+        <p>If you have unwanted electronics consider selling them or donating them instead of throwing them away. This
+            helps keep hazardous materials out of landfils, and maybe even net you a little bit of money :)</p>
+        <h3></h3>
+        <p>If your electronics are broken, then instead of throwing them in the landfill take them to a resource
+            recovery centre.
+            E-waste can contain precious resources that can be easily recycles and used for other things.
+        </p>
     </main>
+    </div>
 </body>
 </html>
