--- a/WebAssesment 2/landfill.html
+++ b/WebAssesment 2/landfill.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+        <div class="parallax">
     <main>
         <header>
             <h1>Green Otago</h1>
@@ -180,6 +181,7 @@
             </tr>
         </table>
     </main>
+    </div>
 </body>
 
 </html>
